# Computational-graph-for-RISC-V-Vector-instructions

./: README.md  aggregated_computational_graph.json  cytoscape_graph.json  execution_graph.json  pyproject.toml  requirements.txt  vector_trace.json  vector_trace_loop.json  vector_trace_simple.json
src/: __init__.py
src/trace_visualisation/: __init__.py  tracer.py
src/trace_visualisation.egg-info/: requires.txt
src/trace_visualisation/UI/: __init__.py  app.py  style.py
src/trace_visualisation/graph_creation/: __init__.py  graph_creation.py
src/trace_visualisation/helper/: __init__.py  helper.py  rvv_disassembler.py
